tests/invalid/Old_Invalid_7.whiley
method m(&int p)
ensures *p == old(*p):
    //
    *p = 1
